[refactoring+fix] Fix of mobile gaps

--- a/src/pages/layout-page/ui/layout-page.component.scss
+++ b/src/pages/layout-page/ui/layout-page.component.scss
@@ -1,5 +1,6 @@
 main {
-	@apply tw-grid tw-gap-24 tw-pb-24  #{!important};
+	@apply tw-bg-main tw-bg-mobile-img md:tw-bg-main-img tw-bg-contain tw-bg-no-repeat;
+	@apply tw-grid md:tw-gap-24 tw-gap-20 tw-pb-24 tw-mt-20;
 	* {
 		@apply tw-grid;
 	}
